--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <script>
         
+        // TEST 
+
         //Questions:
         // If we type in New York or a specific city, is there a general code it can pull from? W ewould then need to populate these into the API URLSearchParams
 
