--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script>
         
-        // TEST 
+        // Troy's Test 2 
 
         //Questions:
         // If we type in New York or a specific city, is there a general code it can pull from? W ewould then need to populate these into the API URLSearchParams
