--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
     <script>
 
+        const d = new Date();
+        const n = d.getFullYear();
+        document.querySelector("#current_year").textContent = n 
+
         document.querySelector('#search-form').onsubmit = (event) => {
         event.preventDefault();
         const searchInput = document.querySelector('#search')
@@ -77,7 +81,7 @@
         fetch(searchURL)
         .then(response => response.json())
         .then(weatherData => {
-            console.log(weatherData.main.temp)
+            // console.log(weatherData.main.temp)
             let weatherP = document.createElement("p")
             weatherP.innerHTML =  `Current tempature: ${weatherData.main.temp}`
             // document.body.appendChild(weatherP);
@@ -86,9 +90,9 @@
 
         searchInput.value = ''
 
-        var newsURL = "https://content.guardianapis.com/search?"
-        var newsapiKey = "api-key=c03c8f41-19d3-4057-b9a1-d0d6651a75f4"
-        var searchNewsUrl = newsURL + newsapiKey + "&q=" + searchCity + "&page-size=3"  
+        const newsURL = "https://content.guardianapis.com/search?"
+        const newsapiKey = "api-key=c03c8f41-19d3-4057-b9a1-d0d6651a75f4"
+        const searchNewsUrl = newsURL + newsapiKey + "&q=" + searchCity + "&page-size=3"  
             // console.log(searchNewsUrl)
                 // search link from original API example
             // fetch("https://content.guardianapis.com/search?api-key=c03c8f41-19d3-4057-b9a1-d0d6651a75f4&total=0&q=norway")
@@ -107,7 +111,7 @@
         });
     }    
       function createLinks(dataLinks) {
-        
+         
         document.querySelector('#dataL').innerHTML="";
 
         dataLinks.response.results.forEach( o => {
@@ -124,7 +128,7 @@
         }
     </script>
 <!--Footer info-->
-<footer>&copy; Copyright 2020 Travel Well</footer>
+<footer>&copy; Copyright <span id="current_year">2020</span> Travel Well</footer>
 
 </body>
 </html>
